--- a/views/index.pug
+++ b/views/index.pug
@@ -8,13 +8,15 @@ include includes/header
   main(role='main')
     .jumbotron
       .col-sm-8.mx-auto
-        h1 Hacking!
+        h1 Code Nerd!
         p
-          | I go through phases. Typically once a year for a span of about 3 months I get really into ethical hacking. One of my favorite websites for this is <a href="https://www.hackthebox.eu/"> hackthebox</a>. 
-          
+          | Thanks for checking out my blog! I'm glad you're here. Take a look around. This is where I post writeups about my most recent projects and discuss topics I find interesting.
+        br
         p
-          | But that's not all. I also enjoy robotics and messing around with my raspberry pi!
-          
+          | If you find my site interesting please let me know via email or comments / likes!
+        br
+        p
+          | -Kyle Supple
           //- This is how to add code / script in text
           
           //- code .container 
