--- a/views/index.pug
+++ b/views/index.pug
@@ -38,7 +38,7 @@ include includes/header
       img(src="img/trippy-2.jpg", alt="trippy", class="card-img-top", style="height: 150px")
     .card-body
       .card-title Generative Machine Learning Pt. 2
-      .card-text Use Googles Deep Dream to create some pretty trippy images. Follow my journey learning how to implement this ML project to create some crazy looking pictures.
+      .card-text Follow my journey learning how to implement Google Deep Dream to create some crazy looking pictures.
       .card-text 
       a.btn.btn-primary(href='/index', role='button') View Post
 
