--- a/views/index.pug
+++ b/views/index.pug
@@ -42,6 +42,25 @@ include includes/header
       .card-text 
       a.btn.btn-primary(href='/index', role='button') View Post
 
+.container
+  .row
+    .col-sm-6
+      .card(class="mb-3")
+        .card-img-top
+          img(src="img/bashed.png", alt="bashed", class="card-img-top", style="height: 200px")
+        .card-title Hackthebox Bashed Writeup
+        .card-text Check out my first HTB writeup! I'm not great at hacking but it's super cool and I want to learn.
+        .card-text 
+        a.btn.btn-primary(href='/index', role='button') View Post
+    .col-sm-6
+      .card(class="mb-3")
+        .card-img-top
+          img(src="img/kalieee.jpeg", alt="kali", class="card-img-top", style="height: 200px")
+        .card-title Kali Linux on a Raspberry Pi
+        .card-text Today I installed Kali Linux on my raspberry pi, then monitored bluetooth traffic! Check it out!
+        .card-text 
+        a.btn.btn-primary(href='/index', role='button') View Post
+
 script(
   src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
