--- a/views/index.pug
+++ b/views/index.pug
@@ -46,12 +46,12 @@ include includes/sidebar
 .container
   .row
     .col-sm-6
-      .card(class="mb-3")
+      .card(class="mb-3") 
         .card-img-top
           img(src="img/bashed.png", alt="bashed", class="card-img-top", style="height: 200px")
         .card-title Hackthebox Bashed Writeup
         .card-text Check out my first HTB writeup! I'm not great at hacking but it's super cool and I want to learn.
-        .card-text 
+        .card-text
           br
           a.btn.btn-primary(href='/index', role='button') View Post
           br
@@ -78,3 +78,5 @@ script(
   crossorigin="anonymous"
 )
 
+.container
+  include includes/footer
