--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,4 +1,8 @@
 
+br
+p &copy My Badass Blog
+br
+
 script(
   src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
