trying to figure out routes

--- a/views/projects.pug
+++ b/views/projects.pug
@@ -30,6 +30,9 @@ include includes/header
         p
           a.btn.btn-primary(href='../../components/navbar/', role='button') View navbar docs »
 
+.container
+  div(class="projects")
+
 script(
   src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"
   integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
@@ -41,6 +44,7 @@ script(
   integrity="sha256-DiWJXXyq81WlPRnDfGmgYZj2aOVCKyEdJ1l+2TmDuAs="
   crossorigin="anonymous"
 )
+
 
 
 .container
