--- a/views/projects.pug
+++ b/views/projects.pug
@@ -32,6 +32,38 @@ include includes/header
 
 .container
   div(class="projects")
+    .container
+      .card(class="mb-3")
+        .card-img-top
+          img(src="img/trippy-2.jpg", alt="trippy", class="card-img-top", style="height: 150px")
+        .card-body
+          .card-title Generative Machine Learning Pt. 2
+          .card-text Follow my journey learning how to implement Google Deep Dream to create some crazy looking pictures.
+          .card-text 
+          a.btn.btn-primary(href='/index', role='button') View Post
+
+    .container
+      .row
+        .col-sm-6
+          .card(class="mb-3") 
+            .card-img-top
+              img(src="img/bashed.png", alt="bashed", class="card-img-top", style="height: 200px")
+            .card-title Hackthebox Bashed Writeup
+            .card-text Check out my first HTB writeup! I'm not great at hacking but it's super cool and I want to learn.
+            .card-text
+              br
+              a.btn.btn-primary(href='/index', role='button') View Post
+              br
+        .col-sm-6
+          .card(class="mb-3")
+            .card-img-top
+              img(src="img/kalieee.jpeg", alt="kali", class="card-img-top", style="height: 200px")
+            .card-title Kali Linux on a Raspberry Pi
+            .card-text Today I installed Kali Linux on my raspberry pi, then monitored bluetooth traffic! Check it out!
+            .card-text 
+              br
+              a.btn.btn-primary(href='/index', role='button') View Post
+              br
 
 script(
   src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.slim.min.js"
